more on the examples

--- a/standard-normal-table.Rmd
+++ b/standard-normal-table.Rmd
@@ -11,18 +11,23 @@ If you have a **right tail area** or **area between** that you need to find, you
 
 So here are a few examples of finding **left tail areas** using the table:
 
-:::{#exm-left-tail-area-}
-## Find the z-value for an exam
+:::{#exm-Left-tail-area-for-$z=1.25$}
+## Left tail area for $z=-1.25$ 
 ```{r}
 knit_example(list(z=-1.25), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
 ```
+:::
 
-```{r example=TRUE, title="Left tail area for $z=1.32$", results='asis'}
-knit_example('statplosion-problems/TableLookup.Rmd', 
-             list(z=1.32))
+:::{#exm-Left-tail-area-for-$z=1.32$}
+## Left tail area for $z=1.32$ 
+```{r}
+knit_example(list(z=1.32), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
 ```
+:::
 
-```{r example=TRUE, title="Left tail area for $z=0.07$", results='asis'}
-knit_example('statplosion-problems/TableLookup.Rmd', 
-             list(z=0.07))
+:::{#exm-Left-tail-area-for-$z=0.07$}
+## Left tail area for $z=0.07$ 
+```{r}
+knit_example(list(z=0.07), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
 ```
+:::
