--- a/changes.txt
+++ b/changes.txt
@@ -1,43 +1,60 @@
 
 Example:
 ```{r example=TRUE, title="Left tail area for $z=-1.25$", results='asis'}
-knit_example('statplosion-problems/TableLookup.Rmd', 
+knit_example('statplosion-problems/TableLookup.Rmd',
              list(z=-1.25))
 ```
-
-Answer:
-:::{#exm-Left-tail-area-for-$z=1.25$}
-## Left tail area for $z=-1.25$ 
+Replacement:
+:::{#exm-Left-tail-area-for-z-equals-minus-1.25}
+## Left tail area for $z=-1.25$
 ```{r}
-knit_example(list(z=-1.25), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
+knit_example(list(z=-1.25),
+                  'statplosion-problems/question/TableLookupQuestion.Rmd',
+                  'statplosion-problems/solution/TableLookupSolution.Rmd')
 ```
 :::
 
 Example:
-```{r example=TRUE, title="Left tail area for $z=1.32$", results='asis'}
-knit_example('statplosion-problems/TableLookup.Rmd', 
+```{r example=TRUE, title="Right tail area for $z=1.32$", results='asis'}
+knit_example('statplosion-problems/StdNormalRightTail.Rmd',
              list(z=1.32))
 ```
-
-Answer:
-:::{#exm-Left-tail-area-for-$z=1.32$}
-## Left tail area for $z=1.32$ 
+Replacement:
+:::{#exm-Left-tail-area-for-z-equals-1.32}
+## Left tail area for $z=1.32$
 ```{r}
-knit_example(list(z=1.32), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
+knit_example(list(z=1.32),
+                  'statplosion-problems/question/StdNormalRightTailQuestion.Rmd',
+                  'statplosion-problems/solution/StdNormalRightTailSolution.Rmd')
 ```
 :::
-
 
 Example:
 ```{r example=TRUE, title="Left tail area for $z=0.07$", results='asis'}
-knit_example('statplosion-problems/TableLookup.Rmd', 
+knit_example('book-problems/question/MyBookProblem.Rmd',
              list(z=0.07))
 ```
-
-Answer:
-:::{#exm-Left-tail-area-for-$z=0.07$}
-## Left tail area for $z=0.07$ 
+Replacement:
+:::{#exm-Left-tail-area-for-z-equals-0.07}
+## Left tail area for $z=0.07$
 ```{r}
-knit_example(list(z=0.07), 'TableLookupQuestion.Rmd', 'TableLookupSolution.Rmd')
+knit_example(list(z=0.07),
+                  'book-problems/question/MyBookProblemQuestion.Rmd',
+                  'book-problems/solution/MyBookProblemSolution.Rmd')
+```
+:::
+
+Example:
+```{r example=TRUE, title="Inventory For $95\\%$ service level", results='asis'}
+knit_example('book-problems/InventoryLevel.Rmd',
+             list(area=0.95, mu=340, sigma=80))
+```
+Replacement:
+:::{#exm-Inventory-For-95-percent-service-level}
+## Inventory For $95\\%$ service level
+```{r}
+knit_example(list(area=0.95, mu=340, sigma=80),
+                  'book-problems/question/InventoryLevelQuestion.Rmd',
+                  'book-problems/solution/InventoryLevelSolution.Rmd')
 ```
 :::
