--- a/measures-of-spread.Rmd
+++ b/measures-of-spread.Rmd
@@ -33,7 +33,7 @@ Then the largest value is 14 and the smallest is 5 so the range of the data is g
 
 $$
 range=max-min=14-5=9
-$$
+$$ {#eq-range}
 ```
 
 ## Mean Deviation
@@ -60,7 +60,7 @@ The mean is
 
 $$
  \text{mean}=\frac{5+8+4+11}{4}=7
-$$
+$$ {#eq-mean}
 
 So the distance the data values are from the mean is like this:
 
@@ -74,7 +74,7 @@ So the distance the data values are from the mean is like this:
 
 $$
  \text{mean deviation}=\frac{2+1+3+4}{4}=2.5
-$$
+$$ {#eq-mean-deviation}
 
 So we can say on average the distance the data values are from the center 7 is 2.5
 ```
@@ -97,7 +97,7 @@ We give the formula here for a population:
 
 $$
 \sigma = \text{standard deviation} = \sqrt{\frac{\sum (x-\mu)^2}{N}}
-$$ {eq:population-std-dev}
+$$ {#eq-population-std-dev}
 
 where $\mu$ is the mean of the population and $N$ is the population size
 
@@ -105,7 +105,7 @@ Now we will usually use this formula for a sample and not a population, and for 
 
 $$
 s = \text{sample standard deviation} = \sqrt{\frac{\sum (x-\bar x)^2}{n-1}}
-$$ {eq:sample-std-dev}
+$$ {#eq-sample-std-dev}
 
 where $s$ is the sample mean and $n$ is the sample size. Notice that the denominator is $n-1$. That is a little different from the population version above. We won\'t go into the reasons for it here, but this gives the sample standard deviation better properties if we do this.
 
